--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,13 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./my-portfolio
 
       - name: Build
         run: npm run build
+        working-directory: ./my-portfolio
         env:
-          NODE_ENV: MyPortfpolio
+          NODE_ENV: production
           VITE_GITHUB_USERNAME: ${{ secrets.VITE_GITHUB_USERNAME }}
           VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
@@ -51,7 +53,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ./my-portfolio/dist
 
       - name: Deploy to GitHub Pages
         id: deployment
