Fix deploy.yml debug steps to properly check environment variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,23 +26,21 @@ jobs:
           cache: "npm"
           cache-dependency-path: ./my-portfolio/package-lock.json
 
-      - name: Debug Environment Variables
+      - name: Check Repository Secrets
         run: |
-          echo "Checking if repository secrets are configured..."
-          echo "This step will show 'NOT SET' for any missing secrets:"
-        env:
-          VITE_GITHUB_USERNAME: ${{ secrets.VITE_GITHUB_USERNAME }}
-          VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN }}
-          VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
-          VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
-          VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
-          VITE_FIREBASE_STORAGE_BUCKET: ${{ secrets.VITE_FIREBASE_STORAGE_BUCKET }}
-          VITE_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }}
-          VITE_FIREBASE_APP_ID: ${{ secrets.VITE_FIREBASE_APP_ID }}
-          VITE_ADMIN_EMAIL: ${{ secrets.VITE_ADMIN_EMAIL }}
-          VITE_EMAILJS_SERVICE_ID: ${{ secrets.VITE_EMAILJS_SERVICE_ID }}
-          VITE_EMAILJS_TEMPLATE_ID: ${{ secrets.VITE_EMAILJS_TEMPLATE_ID }}
-          VITE_EMAILJS_PUBLIC_KEY: ${{ secrets.VITE_EMAILJS_PUBLIC_KEY }}
+          echo "🔍 Checking which repository secrets are configured..."
+          echo "VITE_GITHUB_USERNAME: ${{ secrets.VITE_GITHUB_USERNAME != '' && 'CONFIGURED' || 'MISSING' }}"
+          echo "VITE_GITHUB_TOKEN: ${{ secrets.VITE_GITHUB_TOKEN != '' && 'CONFIGURED' || 'MISSING' }}"
+          echo "VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY != '' && 'CONFIGURED' || 'MISSING' }}"
+          echo "VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN != '' && 'CONFIGURED' || 'MISSING' }}"
+          echo "VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID != '' && 'CONFIGURED' || 'MISSING' }}"
+          echo "VITE_FIREBASE_STORAGE_BUCKET: ${{ secrets.VITE_FIREBASE_STORAGE_BUCKET != '' && 'CONFIGURED' || 'MISSING' }}"
+          echo "VITE_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID != '' && 'CONFIGURED' || 'MISSING' }}"
+          echo "VITE_FIREBASE_APP_ID: ${{ secrets.VITE_FIREBASE_APP_ID != '' && 'CONFIGURED' || 'MISSING' }}"
+          echo "VITE_ADMIN_EMAIL: ${{ secrets.VITE_ADMIN_EMAIL != '' && 'CONFIGURED' || 'MISSING' }}"
+          echo "VITE_EMAILJS_SERVICE_ID: ${{ secrets.VITE_EMAILJS_SERVICE_ID != '' && 'CONFIGURED' || 'MISSING' }}"
+          echo "VITE_EMAILJS_TEMPLATE_ID: ${{ secrets.VITE_EMAILJS_TEMPLATE_ID != '' && 'CONFIGURED' || 'MISSING' }}"
+          echo "VITE_EMAILJS_PUBLIC_KEY: ${{ secrets.VITE_EMAILJS_PUBLIC_KEY != '' && 'CONFIGURED' || 'MISSING' }}"
 
       - name: Install dependencies
         run: npm ci
@@ -70,17 +68,17 @@ jobs:
         run: |
           echo "🔍 Checking environment variables..."
           echo "NODE_ENV: $NODE_ENV"
-          echo "VITE_GITHUB_USERNAME: ${VITE_GITHUB_USERNAME:+SET}"
+          echo "VITE_GITHUB_USERNAME: ${VITE_GITHUB_USERNAME:-NOT_SET}"
           echo "VITE_GITHUB_TOKEN: ${VITE_GITHUB_TOKEN:+SET}"
           echo "VITE_FIREBASE_API_KEY: ${VITE_FIREBASE_API_KEY:+SET}"
-          echo "VITE_FIREBASE_AUTH_DOMAIN: ${VITE_FIREBASE_AUTH_DOMAIN:+SET}"
-          echo "VITE_FIREBASE_PROJECT_ID: ${VITE_FIREBASE_PROJECT_ID:+SET}"
-          echo "VITE_FIREBASE_STORAGE_BUCKET: ${VITE_FIREBASE_STORAGE_BUCKET:+SET}"
-          echo "VITE_FIREBASE_MESSAGING_SENDER_ID: ${VITE_FIREBASE_MESSAGING_SENDER_ID:+SET}"
-          echo "VITE_FIREBASE_APP_ID: ${VITE_FIREBASE_APP_ID:+SET}"
-          echo "VITE_ADMIN_EMAIL: ${VITE_ADMIN_EMAIL:+SET}"
-          echo "VITE_EMAILJS_SERVICE_ID: ${VITE_EMAILJS_SERVICE_ID:+SET}"
-          echo "VITE_EMAILJS_TEMPLATE_ID: ${VITE_EMAILJS_TEMPLATE_ID:+SET}"
+          echo "VITE_FIREBASE_AUTH_DOMAIN: ${VITE_FIREBASE_AUTH_DOMAIN:-NOT_SET}"
+          echo "VITE_FIREBASE_PROJECT_ID: ${VITE_FIREBASE_PROJECT_ID:-NOT_SET}"
+          echo "VITE_FIREBASE_STORAGE_BUCKET: ${VITE_FIREBASE_STORAGE_BUCKET:-NOT_SET}"
+          echo "VITE_FIREBASE_MESSAGING_SENDER_ID: ${VITE_FIREBASE_MESSAGING_SENDER_ID:-NOT_SET}"
+          echo "VITE_FIREBASE_APP_ID: ${VITE_FIREBASE_APP_ID:-NOT_SET}"
+          echo "VITE_ADMIN_EMAIL: ${VITE_ADMIN_EMAIL:-NOT_SET}"
+          echo "VITE_EMAILJS_SERVICE_ID: ${VITE_EMAILJS_SERVICE_ID:-NOT_SET}"
+          echo "VITE_EMAILJS_TEMPLATE_ID: ${VITE_EMAILJS_TEMPLATE_ID:-NOT_SET}"
           echo "VITE_EMAILJS_PUBLIC_KEY: ${VITE_EMAILJS_PUBLIC_KEY:+SET}"
         working-directory: ./my-portfolio
         env:
